applications/tpisula/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: resume
  name: resume
  namespace: tpisula
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resume
  template:
    metadata:
      labels:
        app: resume
    spec:
      containers:
      - name: resume
        image: ghcr.io/tomp736/resume/resume:main
        imagePullPolicy: Always
