applications/tpisula/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: resume
  namespace: tpisula
  labels:
    app: resume
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: resume
